--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
+
 VITE_SERVER_URL='http://localhost:8080'
+
+VITE_APP_BACKEND_ENDPOINT='http://localhost:8080/api/v1'
+VITE_APP_ACCESS_TOKENKEY='accessToken'
