--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "embla-carousel-react": "^8.0.0",
     "emoji-picker-react": "^4.9.3",
     "framer-motion": "^11.2.6",
+    "immer": "^10.1.1",
     "input-otp": "^1.2.2",
     "lucide-react": "^0.358.0",
     "next-themes": "^0.3.0",
@@ -69,6 +70,7 @@
     "react-hook-form": "^7.51.1",
     "react-resizable-panels": "^2.0.13",
     "react-router-dom": "^6.22.3",
+    "react-toastify": "^10.0.5",
     "recharts": "^2.12.2",
     "socket.io-client": "^4.7.2",
     "sonner": "^1.4.41",
