--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-VITE_SERVER_URL='https://casino-pgzo.onrender.com'
+VITE_SERVER_URL='http://localhost:8080'
 VITE_APP_BACKEND_ENDPOINT='https://casino-pgzo.onrender.com/api/v1'
 VITE_APP_ACCESS_TOKENKEY='accessToken'
