--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@react-spring/web": "^9.7.3",
+    "@reduxjs/toolkit": "^2.2.5",
     "@tanstack/react-query": "^5.28.0",
     "@tanstack/react-table": "^8.14.0",
     "@types/phoenix": "^1.6.4",
@@ -81,6 +82,8 @@
     "react-resizable-panels": "^2.0.13",
     "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.5",
+    "redux": "^5.0.1",
+    "redux-saga": "^1.3.0",
     "socket.io-client": "^4.7.2",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.2.2",
@@ -94,6 +97,7 @@
     "@types/node": "^20.11.27",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-redux": "^7.1.33",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
     "@vitejs/plugin-react-swc": "^3.5.0",
