--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "next-themes": "^0.3.0",
     "phoenix": "^1.7.12",
     "react": "^18.3.1",
+    "react-confetti": "^6.1.0",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
