--- a/package.json
+++ b/package.json
@@ -80,10 +80,12 @@
     "react-error-boundary": "^4.0.13",
     "react-helmet-async": "^2.0.4",
     "react-hook-form": "^7.51.1",
+    "react-intersection-observer": "^9.10.3",
     "react-redux": "^9.1.2",
     "react-resizable-panels": "^2.0.13",
     "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.5",
+    "react-use-measure": "^2.1.1",
     "redux": "^5.0.1",
     "redux-saga": "^1.3.0",
     "socket.io-client": "^4.7.2",
