--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "react-toastify": "^10.0.5",
     "react-use-measure": "^2.1.1",
     "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
     "redux-saga": "^1.3.0",
     "socket.io-client": "^4.7.2",
     "sonner": "^1.4.41",
