--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "immer": "^10.1.1",
     "input-otp": "^1.2.2",
     "kujira.js": "^1.0.46",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.358.0",
     "next-themes": "^0.3.0",
     "phoenix": "^1.7.12",
@@ -92,6 +93,7 @@
     "socket.io-client": "^4.7.2",
     "socket.io-msgpack-parser": "^3.0.2",
     "sonner": "^1.4.41",
+    "symbol-observable": "^4.0.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^10.0.0",
