--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/express-jwt": "^6.0.3",
+    "@types/express-unless": "^2.0.1",
     "@types/got": "^9.6.12",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node-fetch": "^2.6.11",
