--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.582.0",
     "@aws-sdk/lib-storage": "^3.582.0",
+    "@cosmjs/cosmwasm-stargate": "^0.32.3",
     "@sendgrid/helpers": "^8.0.0",
     "@sendgrid/mail": "^8.1.3",
     "axios": "^1.7.2",
@@ -43,6 +44,7 @@
     "ioredis": "^5.3.2",
     "joi": "^17.12.1",
     "jsonwebtoken": "^9.0.2",
+    "kujira.js": "^1.0.49",
     "lucid-cardano": "^0.10.7",
     "mongoose": "^8.1.1",
     "multer": "^1.4.5-lts.1",
