--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@types/express-unless": "^2.0.1",
     "@types/got": "^9.6.12",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/lodash": "^4.17.6",
     "@types/node-fetch": "^2.6.11",
     "@types/node-rsa": "^1.1.4",
     "@types/nodemailer": "^6.4.15",
