--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "phoenix": "^1.7.12",
     "react": "^18.3.1",
     "react-confetti": "^6.1.0",
+    "react-countup": "^6.5.3",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
