--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "react-use-measure": "^2.1.1",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
+    "redux-persist-transform-encrypt": "^5.1.1",
     "redux-saga": "^1.3.0",
     "socket.io-client": "^4.7.2",
     "socket.io-msgpack-parser": "^3.0.2",
