--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@tanstack/react-query": "^5.28.0",
     "@tanstack/react-table": "^8.14.0",
     "@types/phoenix": "^1.6.4",
+    "apexcharts": "^3.50.0",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -75,6 +76,7 @@
     "next-themes": "^0.3.0",
     "phoenix": "^1.7.12",
     "react": "^18.3.1",
+    "react-apexcharts": "^1.4.1",
     "react-confetti": "^6.1.0",
     "react-countup": "^6.5.3",
     "react-day-picker": "^8.10.0",
