--- a/.prettierrc
+++ b/.prettierrc
@@ -7,7 +7,5 @@
   "singleQuote": false,
   "tabWidth": 2,
   "endOfLine": "lf",
-  "plugins": [
-    "prettier-plugin-tailwindcss"
-  ]
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
