--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "react-helmet-async": "^2.0.4",
     "react-hook-form": "^7.51.1",
     "react-intersection-observer": "^9.10.3",
+    "react-qr-rounded": "^1.0.0",
     "react-redux": "^9.1.2",
     "react-resizable-panels": "^2.0.13",
     "react-router-dom": "^6.22.3",
